# SpotifyOverlayV2

./: CMakeLists.txt  README.md
include/: AuthManager.h  ConfigManager.h  SpotifyAPI.h  TrackOverlay.h  Types.h
src/: AuthManager.cpp  ConfigManager.cpp  SpotifyAPI.cpp  TrackOverlay.cpp  main.cpp
